tests/invalid/type/cast_byte_256.pts
function main() : void {
    byte b = (byte)256;
}
